--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HomeW3</string>
+    <string name="text_view_second">text_view_second</string>
+    <string name="enter_ingredients">Enter ingredients</string>
+    <string name="click">CLICK</string>
 </resources>
